--- a/github-api-01/src/main/resources/org/kordamp/javatrove/example01/view/app.fxml
+++ b/github-api-01/src/main/resources/org/kordamp/javatrove/example01/view/app.fxml
@@ -19,33 +19,29 @@
     along with Java Trove Examples. If not, see <http://www.gnu.org/licenses/>.
 
 -->
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.GridPane?>
-<GridPane prefHeight="480"
-          hgap="10" vgap="10"
-          xmlns:fx="http://javafx.com/fxml"
-          fx:controller="org.kordamp.javatrove.example01.view.AppView">
-    <padding>
-        <Insets top="10" left="10" right="10" bottom="10"/>
-    </padding>
-    <Label text="Organization:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-    <TextField fx:id="organization" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
+<?import org.tbee.javafx.scene.layout.fxml.MigPane?>
+<MigPane prefHeight="480" prefWidth="400"
+         xmlns:fx="http://javafx.com/fxml"
+         layout="fill, wrap 2, debug" cols="[20%, shrink 200][]"
+         fx:controller="org.kordamp.javatrove.example01.view.AppView">
+    <Label text="Organization:"/>
+    <TextField fx:id="organization" MigPane.cc="growx, push 200"/>
 
-    <Button fx:id="loadButton" text="Load" onAction="#load"
-            GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-    <ProgressBar fx:id="progress" visible="false"
-                 GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+    <Button fx:id="loadButton" styleClass="btn, btn-primary" text="Load" onAction="#load">
+        <graphic>
+            <FontIcon iconLiteral="typ-zoom"/>
+        </graphic>
+    </Button>
+    <ProgressBar fx:id="progress" visible="false" MigPane.cc="growx"/>
 
-    <Label text="Repositories:"
-           GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-    <Label fx:id="total"
-           GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+    <Label text="Repositories:"/>
+    <Label fx:id="total"/>
 
-    <ListView fx:id="repositories" GridPane.columnSpan="2"
-              GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-</GridPane>
+    <ListView fx:id="repositories" MigPane.cc="growx, span 2"/>
+</MigPane>
