--- a/github-api-05/src/main/resources/org/kordamp/javatrove/example05/view/app.fxml
+++ b/github-api-05/src/main/resources/org/kordamp/javatrove/example05/view/app.fxml
@@ -19,37 +19,45 @@
     along with Java Trove Examples. If not, see <http://www.gnu.org/licenses/>.
 
 -->
-<?import javafx.geometry.Insets?>
+<?import org.tbee.javafx.scene.layout.fxml.MigPane?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.GridPane?>
-<GridPane prefHeight="480"
-          hgap="10" vgap="10"
-          xmlns:fx="http://javafx.com/fxml"
-          fx:controller="org.kordamp.javatrove.example05.view.AppView">
-    <padding>
-        <Insets top="10" left="10" right="10" bottom="10"/>
-    </padding>
-    <Label text="Organization:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-    <TextField fx:id="organization" GridPane.rowIndex="0" GridPane.columnIndex="1" GridPane.columnSpan="2"/>
-    <Label text="Limit:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-    <TextField fx:id="limit" GridPane.rowIndex="1" GridPane.columnIndex="1" GridPane.columnSpan="2"/>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
+<MigPane prefHeight="480" prefWidth="400"
+               xmlns:fx="http://javafx.com/fxml"
+               layout="fill" cols="[30%][30%][40%]"
+               fx:controller="org.kordamp.javatrove.example05.view.AppView">
+    <Label text="Organization:"/>
+    <TextField fx:id="organization"
+               MigPane.cc="grow, span 2, wrap"/>
+    <Label text="Limit:"/>
+    <TextField fx:id="limit"
+               MigPane.cc="grow, span 2, wrap"/>
 
     <Button fx:id="loadButton" text="Load" onAction="#load"
-            GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+            MigPane.cc="center" prefWidth="120"
+            styleClass="btn, btn-primary">
+        <graphic>
+            <FontIcon iconLiteral="typ-zoom"/>
+        </graphic>
+    </Button>
     <Button fx:id="cancelButton" text="Cancel" onAction="#cancel"
-            GridPane.rowIndex="2" GridPane.columnIndex="1"/>
-    <ProgressBar fx:id="progress" visible="false"
-                 GridPane.rowIndex="2" GridPane.columnIndex="2"/>
+            MigPane.cc="center" prefWidth="120"
+            styleClass="btn, btn-danger">
+        <graphic>
+            <FontIcon iconLiteral="typ-cancel"/>
+        </graphic>
+    </Button>
+    <ProgressBar fx:id="progress" progress="-1.0" visible="false"
+                 MigPane.cc="right, growx, wrap"/>
 
-    <Label text="Repositories:"
-           GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-    <Label fx:id="total"
-           GridPane.rowIndex="3" GridPane.columnIndex="1" GridPane.columnSpan="2"/>
+    <Label text="Repositories:" styleClass="p"
+           MigPane.cc="left"/>
+    <Label fx:id="total" text="-1" styleClass="p, strong"
+           MigPane.cc="left, span 2, grow, wrap"/>
 
-    <ListView fx:id="repositories" GridPane.columnSpan="3"
-              GridPane.rowIndex="4" GridPane.columnIndex="0"/>
-</GridPane>
+    <ListView fx:id="repositories" MigPane.cc="span 3, grow"/>
+</MigPane>
