--- a/github-api-01/src/main/resources/org/kordamp/javatrove/example01/view/app.css
+++ b/github-api-01/src/main/resources/org/kordamp/javatrove/example01/view/app.css
@@ -16,6 +16,10 @@
  * You should have received a copy of the GNU General Public License
  * along with Java Trove Examples. If not, see <http://www.gnu.org/licenses/>.
  */
+
+.root {
+    -fx-background-color: white;
+}
 .ikonli-font-icon {
     -fx-icon-color: white;
 }
